# Harmony

./: .gitignore  Harmony-release.jks  README.md  gradle.properties  keystore.properties.example  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/debug/res/values/: app_name.xml
app/src/debug/res/xml/: shortcuts.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dd3boh/outertune/: MainActivity.kt  MainActivityUtils.kt
app/src/main/java/com/dd3boh/outertune/constants/: PreferenceKeys.kt  Settings.kt
app/src/main/java/com/dd3boh/outertune/data/: UpdateCheckState.kt  UpdateChecker.kt  UpdateInfo.kt  UpdateRepository.kt
app/src/main/java/com/dd3boh/outertune/db/: DatabaseDao.kt
app/src/main/java/com/dd3boh/outertune/models/: ChatMessage.kt
app/src/main/java/com/dd3boh/outertune/service/: DuckDuckGoService.kt
app/src/main/java/com/dd3boh/outertune/viewmodels/: AIToolsViewModel.kt  AiViewModel.kt  LlamaBridge.kt  LlamaConfig.kt  LlamaEngine.kt  ModelManager.kt
app/src/main/java/com/kraata/harmony/: App.kt  MainActivity.kt  MainActivityUtils.kt
app/src/main/java/com/kraata/harmony/constants/: Dimensions.kt  HistorySource.kt  MediaSessionConstants.kt  PreferenceKeys.kt  Settings.kt  StatPeriod.kt  Vars.kt
app/src/main/java/com/kraata/harmony/data/: UpdateCheckState.kt  UpdateChecker.kt  UpdateInfo.kt  UpdateRepository.kt
app/src/main/java/com/kraata/harmony/db/: Converters.kt  DatabaseDao.kt  MusicDatabase.kt
app/src/main/java/com/kraata/harmony/di/: AppModule.kt
app/src/main/java/com/kraata/harmony/extensions/: ContextExt.kt  CoroutineExt.kt  FileExt.kt  ListExt.kt  MediaItemExt.kt  PlayerExt.kt  StringExt.kt  UtilExt.kt
app/src/main/java/com/kraata/harmony/lyrics/: KuGouLyricsProvider.kt  LocalLyricsProvider.kt  LrcLibLyricsProvider.kt  LyricsHelper.kt  LyricsProvider.kt  YouTubeLyricsProvider.kt  YouTubeSubtitleLyricsProvider.kt
app/src/main/java/com/kraata/harmony/models/: ChatMessage.kt  DirectoryTree.kt  HybridCacheDataSinkFactory.kt  ItemsPage.kt  MediaMetadata.kt  MultiQueueObject.kt  SimilarRecommendation.kt  SongTempData.kt
app/src/main/java/com/kraata/harmony/playback/: DownloadUtil.kt  ExoDownloadService.kt  LifecycleCallbackList.kt  MediaControllerViewModel.kt  MediaLibrarySessionCallback.kt  MusicService.kt  OtOffloadSupportProvider.java  PlayerConnection.kt  QueueBoard.kt  SleepTimer.kt
app/src/main/java/com/kraata/harmony/service/: DuckDuckGoService.kt
app/src/main/java/com/kraata/harmony/utils/: ActivityLaunchHelper.kt  CoilBitmapLoader.kt  DataStore.kt  (+6 more)
app/src/main/llama.cpp/: .gitignore  llama-jni.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml  laucher_foreground.xml  launcher_monochrome.xml  miniplayer_default.xml  miniplayer_floating.xml  placeholder_icon.xml  small_icon.xml
app/src/main/res/drawable-night/: miniplayer_default.xml  miniplayer_floating.xml
app/src/main/res/values/: app_name.xml  strings-ot.xml  strings.xml
app/src/main/res/values-ar/: strings-ot.xml
app/src/main/res/values-az/: strings-ot.xml
app/src/main/res/values-bg/: strings-ot.xml
app/src/main/res/values-de/: strings-ot.xml
app/src/main/res/values-es/: strings-ot.xml
app/src/main/res/values-fa/: strings-ot.xml
app/src/main/res/values-fr/: strings-ot.xml
app/src/main/res/values-in/: strings-ot.xml
app/src/main/res/values-it/: strings-ot.xml
app/src/main/res/values-iw/: strings-ot.xml
app/src/main/res/values-ja/: strings-ot.xml
app/src/main/res/values-ko/: strings-ot.xml
app/src/main/res/values-pl/: strings-ot.xml
app/src/main/res/values-pt/: strings-ot.xml
app/src/main/res/values-pt-rBR/: strings-ot.xml
app/src/main/res/values-ru/: strings-ot.xml
app/src/main/res/values-sr/: strings-ot.xml
app/src/main/res/values-uk/: strings-ot.xml
app/src/main/res/values-vi/: strings-ot.xml
app/src/main/res/values-zh-rCN/: strings-ot.xml
app/src/main/res/xml/: shortcuts.xml
(+227 files in other folders)
